Send JPEG images using Zenoh
* Removes fwd_camera, which previously accepted ZMQ comms and sent them over ROS
* Changes unitree_video_zmq to unitree_video, which now directly sends images over Zenoh DDS instead of decoding to raw and sending over ZMQ

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/unitree_sdk2"]
 	path = third_party/unitree_sdk2
 	url = https://github.com/unitreerobotics/unitree_sdk2.git
+[submodule "third_party/zenoh-c"]
+	path = third_party/zenoh-c
+	url = https://github.com/eclipse-zenoh/zenoh-c.git
